# tq42-pqc-oss

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  win_build_19.bat  win_build_22.bat
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  push.yml  slack.yml  special.yml  style.yml
benchmark/: CMakeLists.txt  benchmark_aes.cpp  benchmark_init.cpp  pqc_benchmark.cpp
docs/: .gitignore  _config.yml  api_reference.md  changelog.md  common_functions.md  getting_started.md  index.markdown  use_cases.md
docs/_includes/: nav_footer_custom.html
examples/: CMakeLists.txt
examples/aes/: CMakeLists.txt  aes_cbc_example.cpp  aes_ctr_example.cpp  aes_ecb_example.cpp  aes_gcm_example.cpp  aes_ofb_example.cpp
examples/asymmetric_container/: CMakeLists.txt  asymmetric_container_example_1_falcon.cpp  asymmetric_container_example_1_mceliece.cpp  asymmetric_container_example_2_byte_string_falcon.cpp  asymmetric_container_example_2_byte_string_mceliece.cpp  asymmetric_container_example_2_to_from_byte_string_falcon.cpp  asymmetric_container_example_2_to_from_byte_string_mceliece.cpp  asymmetric_container_example_3_file_falcon.cpp  asymmetric_container_example_3_file_mceliece.cpp  asymmetric_container_example_3_write_read_to_file_falcon.cpp  asymmetric_container_example_3_write_read_to_file_mceliece.cpp
examples/container/: CMakeLists.txt  container_example_1.cpp  container_example_2_to_from_byte_string.cpp  container_example_3_write_read_to_file.cpp
examples/key_exchange/: CMakeLists.txt  example_kem.cpp  example_mlkem.cpp  kem_mceliece.cpp
examples/pbkdf2/: CMakeLists.txt  pbkdf2_example.cpp
examples/prng/: CMakeLists.txt  prng_example.cpp
examples/sha3/: CMakeLists.txt  const_size_sha3_example.cpp  shake_sha3_example.cpp
examples/signature/: CMakeLists.txt  example_mldsa.cpp  example_signature.cpp  example_slhdsa.cpp  falcon_example.cpp
examples/ssd_hdd_removal/: CMakeLists.txt  ssd_hdd_removal.cpp
python/: CMakeLists.txt  pyproject.toml  setup.py
python/pqc/: __init__.py  pqc.py  utils.py
python/test/: __init__.py  test_aes_cbc.py  test_aes_ctr.py  test_aes_ecb.py  test_aes_gcm.py  test_aes_ofb.py  test_asymmetric_container.py  test_container.py  test_kem_mceliece.py  test_ml_kem.py  test_pbkdf2.py  test_sha3.py  test_sha3_shake.py  test_sign_falcon.py  test_sign_ml_dsa.py  test_sign_slh_dsa.py
src/: AES.LICENSE.txt  CMakeLists.txt  aes.cpp  aes.h  algorithms.cpp  asymmetric_container.cpp  asymmetric_container.h  buffer.h  container.cpp  container.h  core.h  pq.cpp  pq17.cpp  pq17.h  registry.h  secure_delete.cpp  secure_delete.h  sha3.cpp  sha3.h  vector128.h
src/dilithium/: dilithium.cpp  dilithium.h  fips202.cpp  fips202.h  ntt.cpp  ntt.h  packing.cpp  packing.h  params.h  poly.cpp  poly.h  polyvec.cpp  polyvec.h  reduce.cpp  reduce.h  rounding.cpp  rounding.h  symmetric-shake.cpp  symmetric.h
src/falcon/: LICENSE.txt  codec.cpp  common.cpp  falcon.cpp  falcon.h  falcon_main.cpp  falcon_main.h  fft.cpp  fpr.cpp  fpr.h  inner.h  keygen.cpp  sign.cpp  vrfy.cpp
src/mceliece/: LICENSE.txt  benes.cpp  benes.h  controlbits.cpp  controlbits.h  crypto_hash.cpp  crypto_hash.h  declassify.h  decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h  mceliece.cpp  mceliece.h  params.h  pk_gen.cpp  pk_gen.h  sk_gen.cpp  sk_gen.h  sort.cpp  sort.h  special_utils.cpp  special_utils.h
src/mldsa/: dilithium.cpp  dilithium.h  fips202.cpp  fips202.h  ml-dsa.cpp  ml-dsa.h  ml-dsa_44.cpp  ml-dsa_44.h  ml-dsa_65.cpp  ml-dsa_65.h  ml-dsa_87.cpp  ml-dsa_87.h  mldsa_internal.cpp  mldsa_internal.h  ntt.cpp  ntt.h  packing.cpp  packing.h  packingml.cpp  packingml.h  params.h  poly.cpp  poly.h  polyvec.cpp  polyvec.h  reduce.cpp  reduce.h  rounding.cpp  rounding.h  symmetric-shake.cpp  symmetric.h
src/mlkem/: LICENSE.txt  cbd.cpp  cbd.h  fips202.cpp  fips202.h  indcpa.cpp  indcpa.h  kyber.cpp  kyber.h  ml-kem.cpp  ml-kem.h  ntt.cpp  ntt.h  params.h  poly.cpp  poly.h  polyvec.cpp  polyvec.h  reduce.cpp  reduce.h  symmetric-shake.cpp  symmetric.h  verify.cpp  verify.h
src/pbkdf2/: pbkdf2.cpp  pbkdf2.h
src/rng/: external_random_generator.cpp  external_random_generator.h  random_generator.h  rng.cpp  rng.h
src/slhdsa/: LICENSE.txt  address.h  converter.cpp  converter.h  fors.cpp  fors.h  hypertree.cpp  hypertree.h  params.h  slh-dsa.cpp  slh-dsa.h  slhdsa_internal.cpp  slhdsa_internal.h  wots.cpp  wots.h  xmss.cpp  xmss.h
test/: CMakeLists.txt  KDF_test.cpp  aes_test.c  aes_test.cpp  asymmetric_algorithms_test.cpp  asymmetric_container_test.cpp  buffer_test.cpp  container_test.cpp  dilithium_test.cpp  external_rng_test.cpp  falcon_test.cpp  file_delete_test.cpp  interface_test.cpp  kdf_test.cpp  kem_test.cpp  kyber_test.cpp  main.cpp  mceliece_test.cpp  mldsa_test.cpp  mldsa_test_44.cpp  mldsa_test_65.cpp  mldsa_test_87.cpp  mlkem_test.cpp  pbkdf2_test.cpp  rsp_parser.cpp  rsp_parser.h  rsp_parser_test.cpp  sha3_test.cpp  signing_test.cpp  size_test.cpp  slhdsa_test.cpp
test/falcon/: falcon1024-KAT.ent
test/mceliece/: kat_kem.ent  kat_kem.int  kat_kem.shake
test/mldsa/: dilithium-KAT-4880.ent  ml-dsa-44-keygen.rsp  ml-dsa-44-siggen-hedged.rsp  ml-dsa-44-sigver.rsp  ml-dsa-65-keygen.rsp  ml-dsa-65-siggen-hedged.rsp  ml-dsa-65-sigver.rsp  ml-dsa-87-keygen-2.rsp  ml-dsa-87-keygen.rsp  ml-dsa-87-siggen-hedged.rsp  ml-dsa-87-sigver.rsp  ml-dsa87-siggen-hedged-2.rsp  ml-dsa87-sigver-2.rsp
test/mlkem/: kyber1024-KAT.ent  ml-kem-1024-decap.rsp  ml-kem-1024-encap.rsp  ml-kem-1024-keygen.rsp  ml-kem-512-decap.rsp  ml-kem-512-encap.rsp  ml-kem-512-keygen.rsp  ml-kem-768-decap.rsp  ml-kem-768-encap.rsp  ml-kem-768-keygen.rsp
test/sha3/: sha3_helper.cpp  sha3_helper.h
test/slhdsa/: shake-128f-siggen.rsp  shake-128f-sigver.rsp  shake-192s-keygen.rsp  shake-192s-siggen.rsp  shake-192s-sigver.rsp  shake-256f-keygen-atsec.rsp  shake-256f-sigver-atsec.rsp  slh-dsa-shake-256f-keygen.rsp  slh-dsa-shake-256f-siggen-nondeterministic-atsec.rsp  slh-dsa-shake-256f-siggen-nondeterministic.rsp  slh-dsa-shake-256f-sigver.rsp
(+34 files in other folders)
